<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>
    <modules>
        <module>user/service</module>
        <module>user/impl</module>
        <module>user/webapp</module>

        <module>merchant/service</module>
        <module>merchant/impl</module>
        <module>merchant/webapp</module>

        <module>trader-team/service</module>
        <module>trader-team/impl</module>
        <module>trader-team/webapp</module>

        <module>payment-method/service</module>
        <module>payment-method/impl</module>
        <module>payment-method/webapp</module>

        <module>terminal/service</module>
        <module>terminal/impl</module>
        <module>terminal/webapp</module>

        <module>payment/service</module>
        <module>payment/impl</module>
        <module>payment/webapp</module>

        <module>payment-verification/service</module>
        <module>payment-verification/impl</module>
        <module>payment-verification/webapp</module>

        <module>balance/service</module>
        <module>balance/impl</module>
        <module>balance/webapp</module>

        <module>appeal/service</module>
        <module>appeal/impl</module>
        <module>appeal/webapp</module>

        <module>currency/service</module>
        <module>currency/impl</module>
        <module>currency/webapp</module>

        <module>reporting</module>
        <module>notification</module>
        <module>security</module>
        <module>common</module>
    </modules>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.4</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.flacko</groupId>
    <artifactId>flacko-pay</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>flacko-pay</name>
    <description>Demo project for Spring Boot</description>
    <properties>
        <java.version>22</java.version>
        <maven.compiler.source>22</maven.compiler.source>
        <maven.compiler.target>22</maven.compiler.target>
        <spring.boot.maven.plugin.version>3.2.4</spring.boot.maven.plugin.version>
        <spring.boot.dependencies.version>3.2.4</spring.boot.dependencies.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>io.zipkin.reporter2</groupId>
            <artifactId>zipkin-reporter-brave</artifactId>
        </dependency>

        <!--        <dependency>-->
        <!--            <groupId>org.springframework.boot</groupId>-->
        <!--            <artifactId>spring-boot-docker-compose</artifactId>-->
        <!--            <scope>runtime</scope>-->
        <!--            <optional>true</optional>-->
        <!--        </dependency>-->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>
        <!--        <dependency>-->
        <!--            <groupId>com.mysql</groupId>-->
        <!--            <artifactId>mysql-connector-j</artifactId>-->
        <!--            <version>8.3.0</version>-->
        <!--        </dependency>-->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

</project>
